# hip-rtc

./: .gitignore  CMakeLists.txt  LICENCE  README.md
headers/: hiprtc_defines.h  hiprtc_header_defs.h
include/hip/: hiprtc.h
source/: CMakeLists.txt  comgr_wrapper.cpp  comgr_wrapper.hpp  generate_hiprtc_header.cpp  hiprtc.cpp  hiprtc_internal.cpp  hiprtc_internal.hpp  rocm_smi.cpp  rocm_smi.hpp
tests/: CMakeLists.txt  common.hpp  include_header.cpp  load_code.cpp  log.cpp  mangled_names.cpp  prog.cpp  result.cpp  version.cpp
